--- a/sourcecode_review/codeadvent2021/challenge_01.html
+++ b/sourcecode_review/codeadvent2021/challenge_01.html
@@ -15,7 +15,7 @@
 <html/>
 
 <!--
-# Solution
+# Issues
 DOM XSS. "addEventListener" handler for message event is registered and writes the event's data in the DOM
 
 # Mitigation
