--- a/sourcecode_review/codeadvent2021/challenge_01.html
+++ b/sourcecode_review/codeadvent2021/challenge_01.html
@@ -15,6 +15,9 @@
 <html/>
 
 <!--
+# Link
+https://twitter.com/SonarSource/status/1466074614346534916/photo/1
+
 # Issues
 DOM XSS. "addEventListener" handler for message event is registered and writes the event's data in the DOM
 
